<resources>

    <string name="content_hint">Content</string>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="description_post_view" />
    <string name="chooser_share_post" />
    <string name="description_add_post" />
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="google_play_unavailable">Google API Unavailable</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_notification_text" />
    <string name="error_notification_title" />
    <string name="notification_user_new_posted"> Notification_user_new_posted </string>
    <string name="empty_posts">empty_posts</string>
    <string name="retry_loading">retry_loading</string>
    <string name="error_loading">error_loading</string>
    <string name="description_post_attachment" translatable="false" />
    <string name="new_posts">new_posts</string>
    <string name="description_image_full_screen" />
    <string name="description_pick_photo" />
    <string name="description_take_photo" />
    <string name="clear" />
    <string name="description_photo" />
    <string name="post_input_text_hint" />
    <string name="save" />
    <string name="sign_in">sign_in</string>
    <string name="sign_up">sign_up</string>
    <string name="logout">logout</string>
    <string name="sign_in_button">sign_in_button</string>
    <string name="sign_in_password">sign_in_password</string>
    <string name="sign_in_login">sign_in_login</string>
    <string name="sign_in_name">sign_in_name</string>
    <string name="registration">registration</string>
    <string name="repeat_enter_password">repeat_enter_password</string>
    <string name="name">name</string>
    <string name="sign_up_name">sign_up_name</string>
    <string name="wrong_password">wrong_password</string>
    <string name="notification_user_login">Login user by id %1$s</string>
    <string name="retry">retry</string>
    <item name="navigation" type="id" />
</resources>