<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/thisPost"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".activity.FeedFragment">

  <TextView
      android:id="@+id/author"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginEnd="8dp"
      android:ellipsize="end"
      android:maxLines="1"
      android:singleLine="true"
      app:layout_constraintEnd_toStartOf="@id/menu"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/Avatar"
      app:layout_constraintTop_toTopOf="@+id/Avatar"
      tools:text="@sample/posts.json/data/avtor" />

  <TextView
      android:id="@+id/publisher"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="1dp"
      android:text="@sample/posts.json/data/published"
      app:layout_constraintStart_toEndOf="@id/Avatar"
      app:layout_constraintTop_toBottomOf="@+id/author"
      tools:text="[0]" />

  <androidx.constraintlayout.widget.Barrier
      android:id="@+id/bottomBarrier"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="bottom"
      app:constraint_referenced_ids="Avatar,publisher,menu" />

  <ImageView
      android:id="@+id/Avatar"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:contentDescription="@string/app_name"
      android:src="@drawable/netology_icon_foreground"
      android:visibility="visible"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:srcCompat="@sample/posts.json/data/authorAvatar" />

  <ImageView
      android:id="@+id/attachment"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="@dimen/common_spacing"
      android:contentDescription="@string/description_post_attachment"
      android:visibility="gone"
      app:layout_constraintBottom_toTopOf="@id/iconsBarrier"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/content" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/menu"
      style="@style/Widget.AppTheme.IconButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/common_spacing"
      android:contentDescription="@string/description_post_menu"
      app:icon="@drawable/baseline_more_vert_24"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/content"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:autoLink="web"
      android:lineSpacingMultiplier="1.5"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/bottomBarrier"
      tools:text="@sample/posts.json/data/content" />

  <androidx.constraintlayout.widget.Barrier
      android:id="@+id/iconsBarrier"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="bottom"
      app:constraint_referenced_ids="content,video,videoImage,attachment"
      tools:layout_editor_absoluteX="8dp"
      tools:layout_editor_absoluteY="241dp" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/like"
      style="@style/Widget.AppTheme.LikeButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:background="@android:color/transparent"
      android:checkable="true"
      android:contentDescription="@string/description_post_like"
      app:icon="@drawable/ic_like_24dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/iconsBarrier"
      tools:checked="@sample/posts.json/data/likedByMe"
      tools:text="@sample/posts.json/data/likes" />


  <com.google.android.material.button.MaterialButton
      android:id="@+id/share"
      style="@style/Widget.AppTheme.IconButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="16dp"
      android:background="@android:color/transparent"
      android:contentDescription="@string/description_post_share"
      app:icon="@drawable/ic_share_24"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.186"
      app:layout_constraintStart_toEndOf="@+id/like"
      app:layout_constraintTop_toBottomOf="@id/iconsBarrier"
      tools:text="@sample/posts.json/data/shares" />


  <com.google.android.material.button.MaterialButton
      android:id="@+id/view"
      style="@style/Widget.AppTheme.IconButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:background="@android:color/transparent"
      android:contentDescription="@string/description_post_view"
      app:icon="@drawable/ic_view_24"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/iconsBarrier"
      tools:text="@sample/posts.json/data/views" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/video"
      style="@style/Widget.MaterialComponents.Button.Icon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:checkable="true"
      android:visibility="gone"
      app:icon="@drawable/ic_play_48"
      android:gravity="center"
      app:iconGravity="textStart"
      app:iconPadding="0dp"
      app:iconTint="@android:color/black"
      android:padding="0dp"
      android:layout_alignParentTop="true"
      android:layout_alignParentRight="true"
      app:layout_constraintBottom_toTopOf="@id/iconsBarrier"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/content" />

  <ImageView
      android:id="@+id/videoImage"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:contentDescription="@string/app_name"
      android:visibility="gone"
      app:layout_constraintTop_toBottomOf="@id/content"
      app:srcCompat="@drawable/background_video"
      tools:layout_editor_absoluteX="32dp"
      tools:srcCompat="@tools:sample/backgrounds/scenic" />



</androidx.constraintlayout.widget.ConstraintLayout>
